# letsdns

./: .gitignore  .gitlab-ci.yaml  .pycodestyle  CONTRIBUTING.md  Makefile  README.md  requirements-ci.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
contrib/: package
docs/: Makefile  example.config  index.html  letsdns.adoc  live_reload.py  serve.py
docs/_source/: actions.rst  conf.py  conf.rst  example.conf  exampleconf.rst  index.rst  letsdns.rst  modules.rst
docs/source/: changelog.rst  conf.py  conf.rst  config.rst  contrib.rst  dynaction.rst  envvar.rst  example.conf  example.rst  exampleconf.rst  index.rst  install.rst  letsdns.rst  license.rst  operation.rst
docs/source/_static/: bash-install  bash-run  bash-wildcard  dynaction-py  dynaction-tree  example.conf  mx.ini  pip-install  venv-install  www.ini
letsdns/: __init__.py  __main__.py  action.py  conf.py  config.py  configuration.py  core.py  crypt.py  crypto.py  hetznerapi.py  liveupdate.py  main.py  nsupdate.py  tlsa.py  util.py
scripts/: eol-fix.sh  install.sh
tests/: .coveragerc  .gitignore  Makefile  __init__.py  actions.py  actiontest.conf  citest.conf  citest.crt  dump-expected  test_action.py  test_config.py  test_configuration.py  test_hetzner.py  test_tlsa.py  test_util.py
