[metadata]
author = Ralph Seichter
author_email = author@letsdns.org
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Topic :: System :: Systems Administration
  Topic :: Utilities
description = Manage DANE TLSA records in DNS servers
long_description = file: README.md
long_description_content_type = text/markdown
name = letsdns
url = https://github.com/LetsDNS/letsdns
version = 1.0.dev982024

[options]
install_requires =
  cryptography
  dnspython
  requests
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  letsdns = letsdns.__main__:main
