[metadata]
author = Ralph Seichter
author_email = author@letsdns.de
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Topic :: System :: Systems Administration
  Topic :: Utilities
description = Manage DANE TLSA records in DNS servers
long_description = file: README.md
long_description_content_type = text/markdown
name = letsdns
project_urls =
  Documentation = https://www.letsdns.de
  Source = https://github.com/LetsDNS/letsdns
  Tracker = https://github.com/LetsDNS/letsdns/issues
url = https://www.letsdns.de
version = 1.2.2

[options]
install_requires =
  cryptography
  dnspython
  requests
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
  letsdns = letsdns.__main__:main

[options.packages.find]
exclude = tests*
